--- a/date/2025-06/page-2.htm
+++ b/date/2025-06/page-2.htm
@@ -114,6 +114,81 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 6月7日21.6M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 6月7日21.6M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、韩国、新加坡、加拿大、香港、日本、美国等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-6-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 6月6日22.4M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享" src="/uploads/20241222-1/5f167ecea9a0c5eda7bc8fa7798e5773.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-6-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 6月6日22.4M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、韩国、新加坡、香港、欧洲、美国、加拿大等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-5-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 6月5日21M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-5-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 6月5日21M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、美国、韩国、加拿大、新加坡、日本、欧洲等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-04">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-4-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 6月4日20.9M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/a621dbd095b5853e39cd840d5e02d439.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-4-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 6月4日20.9M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、美国、新加坡、加拿大、韩国、日本、香港等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-03">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-3-node-share.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 6月3日18.2M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享" src="/uploads/20241222-1/105f920c4a52c86168fd60611ecae2fe.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-3-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 6月3日18.2M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、欧洲、日本、香港、韩国、加拿大、美国等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-06-02">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-6-2-free-node-subscribe-links.htm" class="xcblog-blog-url">
@@ -154,16 +229,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-7-free-v2ray-subscribe.htm" title="VPN设备 | 5月7日23M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享">VPN设备 | 5月7日23M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-110867.htm" title="import axios from ‘axios‘失效的问题">import axios from ‘axios‘失效的问题</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-20-free-high-speed-nodes.htm" title="VPN设备 | 5月20日19.3M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享">VPN设备 | 5月20日19.3M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-8-free-v2ray-subscribe.htm" title="VPN设备 | 5月8日18.5M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 5月8日18.5M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-19-clash-v2ray-ss-ssr.htm" title="VPN设备 | 5月19日21.3M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 5月19日21.3M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-31-free-node-subscribe-links.htm" title="VPN设备 | 5月31日21.5M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享">VPN设备 | 5月31日21.5M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-9-node-share.htm" title="VPN设备 | 6月9日20M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 6月9日20M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-8-free-subscribe-node.htm" title="VPN设备 | 6月8日21.8M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 6月8日21.8M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-27-clash-v2ray-ss-ssr.htm" title="VPN设备 | 5月27日18.1M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 5月27日18.1M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-14-free-v2ray.htm" title="VPN设备 | 5月14日21.9M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 5月14日21.9M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-10-free-subscribe-node.htm" title="VPN设备 | 6月10日18.7M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享">VPN设备 | 6月10日18.7M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-12-node-share-links.htm" title="VPN设备 | 5月12日21.8M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 5月12日21.8M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-18-node-share.htm" title="VPN设备 | 5月18日22.1M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享">VPN设备 | 5月18日22.1M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-26-free-high-speed-nodes.htm" title="VPN设备 | 5月26日19M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 5月26日19M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-111692.htm" title="动物医院名字创意图片素材大全（动物医院名片设计）">动物医院名字创意图片素材大全（动物医院名片设计）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-25-free-node-subscribe-links.htm" title="VPN设备 | 5月25日18.6M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 5月25日18.6M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-5-free-node-subscribe-links.htm" title="VPN设备 | 5月5日18.8M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 5月5日18.8M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-15-free-v2ray-subscribe.htm" title="VPN设备 | 6月15日18M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 6月15日18M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -175,7 +250,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
