--- a/date/2025-07/index.htm
+++ b/date/2025-07/index.htm
@@ -274,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-7-vpn-free.htm" title="VPN安卓 | 8月7日21.1M/S|免费V2ray/Shadowrocket/SSR/Clash免费节点订阅分享">VPN安卓 | 8月7日21.1M/S|免费V2ray/Shadowrocket/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-25-share-vpn.htm" title="VPN设备 | 8月25日22.6M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享">VPN设备 | 8月25日22.6M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="VPN设备 | 8月28日19.4M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享">VPN设备 | 8月28日19.4M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-15-node-share.htm" title="VPN安卓 | 7月15日18.5M/S|免费SSR/Clash/V2ray/Shadowrocket免费节点订阅分享">VPN安卓 | 7月15日18.5M/S|免费SSR/Clash/V2ray/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-9-free-vpn-node.htm" title="VPN安卓 | 7月9日21.2M/S|免费V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN安卓 | 7月9日21.2M/S|免费V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-13-vpn-free.htm" title="VPN安卓 | 8月13日19.6M/S|免费SSR/V2ray/Clash/Shadowrocket免费节点订阅分享">VPN安卓 | 8月13日19.6M/S|免费SSR/V2ray/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-30-free-node-subscribe-links.htm" title="VPN安卓 | 7月30日18.1M/S|免费SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN安卓 | 7月30日18.1M/S|免费SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-23-top-vpn-node.htm" title="VPN设备 | 8月23日21.7M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 8月23日21.7M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-14-top-vpn-node.htm" title="VPN安卓 | 7月14日20.5M/S|免费SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN安卓 | 7月14日20.5M/S|免费SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-28-free-node-subscribe.htm" title="VPN安卓 | 7月28日21M/S|免费Shadowrocket/SSR/V2ray/Clash免费节点订阅分享">VPN安卓 | 7月28日21M/S|免费Shadowrocket/SSR/V2ray/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-7-free-node-subscribe.htm" title="VPN安卓 | 7月7日20.5M/S|免费V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN安卓 | 7月7日20.5M/S|免费V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-20-vpn-proxy.htm" title="VPN安卓 | 7月20日19.6M/S|免费V2ray/SSR/Shadowrocket/Clash免费节点订阅分享">VPN安卓 | 7月20日19.6M/S|免费V2ray/SSR/Shadowrocket/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-18-share-vpn.htm" title="VPN安卓 | 8月18日19.6M/S|免费V2ray/Shadowrocket/SSR/Clash免费节点订阅分享">VPN安卓 | 8月18日19.6M/S|免费V2ray/Shadowrocket/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-23-top-vpn-node.htm" title="VPN安卓 | 7月23日21.4M/S|免费V2ray/SSR/Shadowrocket/Clash免费节点订阅分享">VPN安卓 | 7月23日21.4M/S|免费V2ray/SSR/Shadowrocket/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-16-vpn-free.htm" title="VPN安卓 | 7月16日20.2M/S|免费Shadowrocket/V2ray/Clash/SSR免费节点订阅分享">VPN安卓 | 7月16日20.2M/S|免费Shadowrocket/V2ray/Clash/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-29-top-vpn.htm" title="VPN安卓 | 7月29日22.8M/S|免费SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN安卓 | 7月29日22.8M/S|免费SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-11-top-vpn.htm" title="VPN安卓 | 7月11日20.7M/S|免费V2ray/SSR/Shadowrocket/Clash免费节点订阅分享">VPN安卓 | 7月11日20.7M/S|免费V2ray/SSR/Shadowrocket/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-25-vpn-free.htm" title="VPN安卓 | 7月25日21.4M/S|免费Clash/Shadowrocket/V2ray/SSR免费节点订阅分享">VPN安卓 | 7月25日21.4M/S|免费Clash/Shadowrocket/V2ray/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-5-share-vpn.htm" title="VPN安卓 | 8月5日22.4M/S|免费V2ray/Clash/Shadowrocket/SSR免费节点订阅分享">VPN安卓 | 8月5日22.4M/S|免费V2ray/Clash/Shadowrocket/SSR免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -295,7 +295,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">31</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
